# pixel-qr

./: .gitignore  README.md  Taskfile.yml  package-lock.json  package.json
backend/: pyproject.toml
backend/src/: main.py
backend/src/api/: qr_codes.py
backend/src/schemas/: errors.py
backend/src/services/: image_validator.py  qr_generator.py  url_validator.py
backend/tests/: test_qr_codes_api.py  test_qr_generator.py  test_validators.py
docs/: base-technical-design.md  requirements.md  technical-design.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/qr-codes/: route.ts
frontend/components/: pixel-qr-form.tsx  qr-preview.tsx
frontend/lib/: api.ts  browser-qr.ts  download.ts  validation.ts
