[project]
name = "pixel-qr-backend"
version = "0.1.0"
description = "FastAPI backend for Pixel QR"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "pillow>=11.0.0",
  "python-multipart>=0.0.12",
  "qrcode[pil]>=8.0",
  "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
